--- a/index.html
+++ b/index.html
@@ -1260,8 +1260,520 @@
 
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-    // Dados simulados da planilha Excel (será substituído pela planilha real depois)
-    const addressDatabase = {};
+    // Dados da planilha Excel - Mapeamento de QR codes para endereços
+    const addressDatabase = {
+  "BR2548334621214": {
+    "address": "Alameda Moraes, 246, Rua ao lado do Conselho tutela\nBairro: Praia Grande (Mosqueiro)\nBelém - 66914-090",
+    "latitude": -1.1424655,
+    "longitude": -48.4652878,
+    "city": "Belém",
+    "zipcode": "66914-090"
+  },
+  "BR258090515239N": {
+    "address": "Alameda Moraes, 246, Rua ao lado do Conselho tutela\nBairro: Praia Grande (Mosqueiro)\nBelém - 66914-090",
+    "latitude": -1.1424655,
+    "longitude": -48.4652878,
+    "city": "Belém",
+    "zipcode": "66914-090"
+  },
+  "BR2543386241922": {
+    "address": "Alameda Moraes, 246\nBairro: Praia Grande (Mosqueiro)\nBelém - 66914-090",
+    "latitude": -1.1424655,
+    "longitude": -48.4652878,
+    "city": "Belém",
+    "zipcode": "66914-090"
+  },
+  "BR257485707468Y": {
+    "address": "Alameda Moraes, 246\nBairro: Praia Grande (Mosqueiro)\nBelém - 66914-090",
+    "latitude": -1.1424655,
+    "longitude": -48.4652878,
+    "city": "Belém",
+    "zipcode": "66914-090"
+  },
+  "BR2590650161019": {
+    "address": "Alameda Petrópolis, 42, Casa branca com muro baixinho\nBairro: Praia Grande (Mosqueiro)\nBelém - 66914-100",
+    "latitude": -1.1432,
+    "longitude": -48.4659004,
+    "city": "Belém",
+    "zipcode": "66914-100"
+  },
+  "BR259792298200M": {
+    "address": "Alameda Ribamar Santos, 15, Ao lado da LR mat. De construç\nBairro: Praia Grande\nBelém - 66911-120",
+    "latitude": -1.1438776,
+    "longitude": -48.4640884,
+    "city": "Belém",
+    "zipcode": "66911-120"
+  },
+  "BR255026824340N": {
+    "address": "Avenida Beira-Mar - Rua: Dos Escoteiros Próximo A Rua: Alameda Moraes, 1657, Condominio prive do farol, Belém, Pará, 66910150\nBelém - 66910150",
+    "latitude": -1.1451693,
+    "longitude": -48.4655266,
+    "city": "Belém",
+    "zipcode": "66910150"
+  },
+  "BR255669520013M": {
+    "address": "Passagem São Domingos, 33, Próximo à Rua das Mangueiras\nBairro: Praia Grande (Mosqueiro)\nBelém - 66914-080",
+    "latitude": -1.1456899,
+    "longitude": -48.4648368,
+    "city": "Belém",
+    "zipcode": "66914-080"
+  },
+  "BR2532092523217": {
+    "address": "Rua Raimundo Cintra, 39, Entre São Domingos e Santa Ter\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-220",
+    "latitude": -1.1466,
+    "longitude": -48.462101,
+    "city": "Belém",
+    "zipcode": "66912-220"
+  },
+  "BR252457049287C": {
+    "address": "Rua Raimundo Cintra, 12\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-220",
+    "latitude": -1.1470315,
+    "longitude": -48.4626465,
+    "city": "Belém",
+    "zipcode": "66912-220"
+  },
+  "BR257080667441M": {
+    "address": "Passg Santa Rita De Kace, 31\nBairro: Ariramba (Mosqueiro)\nBelém - 66914-110",
+    "latitude": -1.1463585,
+    "longitude": -48.4638905,
+    "city": "Belém",
+    "zipcode": "66914-110"
+  },
+  "BR259832570656I": {
+    "address": "Passg Santa Rita De Kace, 31\nBairro: Ariramba (Mosqueiro)\nBelém - 66914-110",
+    "latitude": -1.1463585,
+    "longitude": -48.4638905,
+    "city": "Belém",
+    "zipcode": "66914-110"
+  },
+  "BR2555419499636": {
+    "address": "Passagem Mirim, 2, Av. Beira Mar\nBairro: Praia grande mosqueiro\nBelém - 66914-510",
+    "latitude": -1.15,
+    "longitude": -48.4671,
+    "city": "Belém",
+    "zipcode": "66914-510"
+  },
+  "BR2510739661481": {
+    "address": "Rua do Carmo, 83, Casa\nBairro: Praia Grande (Mosqueiro)\nBelém - 66914-040",
+    "latitude": -1.1504477,
+    "longitude": -48.4675026,
+    "city": "Belém",
+    "zipcode": "66914-040"
+  },
+  "BR256427341903Q": {
+    "address": "Rua Quinze de Novembro, 39, Praia grande casa verde\nBairro: Vila (Mosqueiro)\nBelém - 66910-000",
+    "latitude": -1.1509,
+    "longitude": -48.4693985,
+    "city": "Belém",
+    "zipcode": "66910-000"
+  },
+  "BR252765984646G": {
+    "address": "Rua Quinze de Novembro, 39, Praia grande casa verde\nBairro: Vila (Mosqueiro)\nBelém - 66910-000",
+    "latitude": -1.1509,
+    "longitude": -48.4693985,
+    "city": "Belém",
+    "zipcode": "66910-000"
+  },
+  "BR2508214594606": {
+    "address": "Alameda França, 33\nBairro: Praia Grande (Mosqueiro)\nBelém - 66914-230",
+    "latitude": -1.151652,
+    "longitude": -48.4677925,
+    "city": "Belém",
+    "zipcode": "66914-230"
+  },
+  "BR257708180761F": {
+    "address": "Avenida Beira-Mar, 1076, Proximo a barraca carioquinha\nBairro: Vila (Mosqueiro)\nBelém - 66910-150",
+    "latitude": -1.1522,
+    "longitude": -48.4702988,
+    "city": "Belém",
+    "zipcode": "66910-150"
+  },
+  "BR2570195095799": {
+    "address": "Rua Coronel José do Ó, 137, Próximo a alameda Raimunda\nBairro: Vila (Mosqueiro)\nBelém - 66910-010",
+    "latitude": -1.1536975,
+    "longitude": -48.4707031,
+    "city": "Belém",
+    "zipcode": "66910-010"
+  },
+  "BR252206059319K": {
+    "address": "Travessa Lauro Sodré, 198 a\nBairro: Vila (Mosqueiro)\nBelém - 66910-170",
+    "latitude": -1.154588,
+    "longitude": -48.4708481,
+    "city": "Belém",
+    "zipcode": "66910-170"
+  },
+  "BR258463997845D": {
+    "address": "Travessa Lauro Sodré, 156, Próximo ao Hospital Municipal\nBairro: Vila (Mosqueiro)\nBelém - 66910-170",
+    "latitude": -1.154617,
+    "longitude": -48.470768,
+    "city": "Belém",
+    "zipcode": "66910-170"
+  },
+  "BR250808162475E": {
+    "address": "Travessa Lauro Sodré, 235, Ao lado do hospital geral\nBairro: Vila (Mosqueiro)\nBelém - 66910-170",
+    "latitude": -1.1545,
+    "longitude": -48.4700012,
+    "city": "Belém",
+    "zipcode": "66910-170"
+  },
+  "BR250622958347D": {
+    "address": "Rua Quinze de Novembro, 728\nBairro: Vila (Mosqueiro)\nBelém - 66910-000",
+    "latitude": -1.1571,
+    "longitude": -48.4695015,
+    "city": "Belém",
+    "zipcode": "66910-000"
+  },
+  "BR253698799515E": {
+    "address": "Rua Quinze de Novembro, 688, Entre o hospital e as 5 bocas\nBairro: Vila (Mosqueiro)\nBelém - 66910-000",
+    "latitude": -1.1568567,
+    "longitude": -48.4692841,
+    "city": "Belém",
+    "zipcode": "66910-000"
+  },
+  "BR257375048849G": {
+    "address": "Rua Quinze de Novembro, 830\nBairro: Vila (Mosqueiro)\nBelém - 66910-000",
+    "latitude": -1.1584749,
+    "longitude": -48.4690933,
+    "city": "Belém",
+    "zipcode": "66910-000"
+  },
+  "BR2570810926273": {
+    "address": "Travessa Coronel José Mota, 263, Proximidade da Av 16 de Novemb\nBairro: Vila (Mosqueiro)\nBelém - 66910-680",
+    "latitude": -1.1585106,
+    "longitude": -48.4683007,
+    "city": "Belém",
+    "zipcode": "66910-680"
+  },
+  "BR2589228991775": {
+    "address": "Rua Quinze de Novembro, 18, Passagem sao sebastiao\nBairro: Vila (Mosqueiro)\nBelém - 66910-000",
+    "latitude": -1.1597145,
+    "longitude": -48.469059,
+    "city": "Belém",
+    "zipcode": "66910-000"
+  },
+  "BR255892110928M": {
+    "address": "Rua Quinze de Novembro, 18, Passagem sao sebastiao\nBairro: Vila (Mosqueiro)\nBelém - 66910-000",
+    "latitude": -1.1597145,
+    "longitude": -48.469059,
+    "city": "Belém",
+    "zipcode": "66910-000"
+  },
+  "BR254165660090X": {
+    "address": "Rua Quinze de Novembro, 18, Ao lado da NutriPets rações\nBairro: Vila (Mosqueiro)\nBelém - 66910-000",
+    "latitude": -1.1597145,
+    "longitude": -48.469059,
+    "city": "Belém",
+    "zipcode": "66910-000"
+  },
+  "BR255864217202N": {
+    "address": "Rua Quinze de Novembro, 18, Ao lado da NutriPets rações\nBairro: Vila (Mosqueiro)\nBelém - 66910-000",
+    "latitude": -1.1597145,
+    "longitude": -48.469059,
+    "city": "Belém",
+    "zipcode": "66910-000"
+  },
+  "BR2559482212905": {
+    "address": "Rua Quinze de Novembro, 1021, Entre cinco bocas e Getúlio\nBairro: Vila (Mosqueiro)\nBelém - 66910-000",
+    "latitude": -1.1600853,
+    "longitude": -48.4689713,
+    "city": "Belém",
+    "zipcode": "66910-000"
+  },
+  "BR257588309119A": {
+    "address": "Rua Quinze de Novembro, 121, Próximo as cinco bocas\nBairro: Vila (Mosqueiro)\nBelém - 66910-000",
+    "latitude": -1.1589,
+    "longitude": -48.4688988,
+    "city": "Belém",
+    "zipcode": "66910-000"
+  },
+  "BR256931637480Z": {
+    "address": "Rua Quinze de Novembro, 10, Alemeda terra prometida, Belém, Pará, 66910000\nBelém - 66910000",
+    "latitude": -1.1587799,
+    "longitude": -48.4689636,
+    "city": "Belém",
+    "zipcode": "66910000"
+  },
+  "BR2558435081671": {
+    "address": "Avenida Dezesseis de Novembro, 2909, Em frente ao quiosque ki gosto\nBairro: Vila (Mosqueiro)\nBelém - 66910-140",
+    "latitude": -1.1566,
+    "longitude": -48.467701,
+    "city": "Belém",
+    "zipcode": "66910-140"
+  },
+  "BR258040408902Y": {
+    "address": "Rua Padre Manoel Raiol, 220, Muro amarelo com telhas vermel\nBairro: Vila (Mosqueiro)\nBelém - 66910-040",
+    "latitude": -1.1570348,
+    "longitude": -48.467514,
+    "city": "Belém",
+    "zipcode": "66910-040"
+  },
+  "BR257612403013T": {
+    "address": "Avenida Dezesseis de Novembro, 72, Em frente depósito Xavier ao lado João motos\nBairro: Vila (Mosqueiro)\nBelém - 66910-140",
+    "latitude": -1.1532554,
+    "longitude": -48.466176,
+    "city": "Belém",
+    "zipcode": "66910-140"
+  },
+  "BR258316357232J": {
+    "address": "Avenida Dezesseis de Novembro, 72, Em frente depósito Xavier ao lado João motos\nBairro: Vila (Mosqueiro)\nBelém - 66910-140",
+    "latitude": -1.1532554,
+    "longitude": -48.466176,
+    "city": "Belém",
+    "zipcode": "66910-140"
+  },
+  "BR2553020039350": {
+    "address": "Avenida Dezesseis de Novembro, 72, Em frente depósito Xavier ao lado João motos\nBairro: Vila (Mosqueiro)\nBelém - 66910-140",
+    "latitude": -1.1532554,
+    "longitude": -48.466176,
+    "city": "Belém",
+    "zipcode": "66910-140"
+  },
+  "BR257648789028P": {
+    "address": "Avenida Dezesseis de Novembro, 72, Em frente depósito Xavier ao lado João motos\nBairro: Vila (Mosqueiro)\nBelém - 66910-140",
+    "latitude": -1.1532554,
+    "longitude": -48.466176,
+    "city": "Belém",
+    "zipcode": "66910-140"
+  },
+  "BR258126401029R": {
+    "address": "Avenida Dezesseis de Novembro, 72\nBairro: Vila (Mosqueiro)\nBelém - 66910-140",
+    "latitude": -1.1532554,
+    "longitude": -48.466176,
+    "city": "Belém",
+    "zipcode": "66910-140"
+  },
+  "BR2531457461885": {
+    "address": "Avenida Dezesseis de Novembro, 72, Em frente deposito Xavier ao lado João motos\nBairro: Vila (Mosqueiro)\nBelém - 66910-140",
+    "latitude": -1.1532554,
+    "longitude": -48.466176,
+    "city": "Belém",
+    "zipcode": "66910-140"
+  },
+  "BR253333999131P": {
+    "address": "Avenida Dezesseis de Novembro, 2391, Ao lado da barbearia adryan\nBairro: Vila (Mosqueiro)\nBelém - 66910-140",
+    "latitude": -1.1524897,
+    "longitude": -48.4659386,
+    "city": "Belém",
+    "zipcode": "66910-140"
+  },
+  "BR253625124030V": {
+    "address": "Passagem Atlântida, 03, Em frente ao Cantinho Azulino\nBairro: Vila (Mosqueiro)\nBelém - 66910-520",
+    "latitude": -1.1530946,
+    "longitude": -48.4672508,
+    "city": "Belém",
+    "zipcode": "66910-520"
+  },
+  "BR257518523148D": {
+    "address": "Alameda Ferreira, 28, Ao lado do comercial Antônio\nBairro: Vila (Mosqueiro)\nBelém - 66910-050",
+    "latitude": -1.1531883,
+    "longitude": -48.466831,
+    "city": "Belém",
+    "zipcode": "66910-050"
+  },
+  "BR259312148009G": {
+    "address": "Passagem Atlântida, 03, Ao lado da  antena\nBairro: Vila (Mosqueiro)\nBelém - 66910-520",
+    "latitude": -1.1530946,
+    "longitude": -48.4672508,
+    "city": "Belém",
+    "zipcode": "66910-520"
+  },
+  "BR256031024378C": {
+    "address": "Alameda Bela Vista, 6, 16 de novembro/ Camilo salgado\nBairro: Vila (Mosqueiro)\nBelém - 66910-390",
+    "latitude": -1.1538,
+    "longitude": -48.4674988,
+    "city": "Belém",
+    "zipcode": "66910-390"
+  },
+  "BR252838900075R": {
+    "address": "Travessa Bela Vista, 2, Próximo ao hospital geral\nBairro: Praia Grande\nBelém - 66912-140",
+    "latitude": -1.1538016,
+    "longitude": -48.4650497,
+    "city": "Belém",
+    "zipcode": "66912-140"
+  },
+  "BR250305017276D": {
+    "address": "Rua Sandro Carvalho, 68-A, Paquetá\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-180",
+    "latitude": -1.1528,
+    "longitude": -48.4622993,
+    "city": "Belém",
+    "zipcode": "66912-180"
+  },
+  "BR259426316988F": {
+    "address": "Rua Sandro Carvalho, 68-A, Paquetá\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-180",
+    "latitude": -1.1528,
+    "longitude": -48.4622993,
+    "city": "Belém",
+    "zipcode": "66912-180"
+  },
+  "BR2573946235544": {
+    "address": "Rua Bariloche, 30, Casa\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-130",
+    "latitude": -1.1523347,
+    "longitude": -48.4615555,
+    "city": "Belém",
+    "zipcode": "66912-130"
+  },
+  "BR258040312070F": {
+    "address": "Rua Bariloche, 30, Casa\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-130",
+    "latitude": -1.1523347,
+    "longitude": -48.4615555,
+    "city": "Belém",
+    "zipcode": "66912-130"
+  },
+  "BR2561235030362": {
+    "address": "Alameda Paquetá, 4, próximo ao comercial Caroline\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-210",
+    "latitude": -1.1530893,
+    "longitude": -48.4613724,
+    "city": "Belém",
+    "zipcode": "66912-210"
+  },
+  "BR252010309093W": {
+    "address": "Alameda Paquetá, 4, próximo ao comercial Caroline\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-210",
+    "latitude": -1.1530893,
+    "longitude": -48.4613724,
+    "city": "Belém",
+    "zipcode": "66912-210"
+  },
+  "BR2512319420247": {
+    "address": "Travessa Santa Helena, O1, Atrás da loja Dluna Beach\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-200",
+    "latitude": -1.1548012,
+    "longitude": -48.4614143,
+    "city": "Belém",
+    "zipcode": "66912-200"
+  },
+  "BR254841014012P": {
+    "address": "Praça do carmo, 27, Bar do seu bene\nBairro: Cidade velha\nBelém - 66912-230",
+    "latitude": -1.1591978,
+    "longitude": -48.4569525,
+    "city": "Belém",
+    "zipcode": "66912-230"
+  },
+  "BR258670218678R": {
+    "address": "Travessa Bela Vista, 87\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-140",
+    "latitude": -1.1542,
+    "longitude": -48.4594002,
+    "city": "Belém",
+    "zipcode": "66912-140"
+  },
+  "BR254442724443V": {
+    "address": "Alameda Paquetá, 900, Final do asfalto lado direito\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-210",
+    "latitude": -1.1533793,
+    "longitude": -48.4588051,
+    "city": "Belém",
+    "zipcode": "66912-210"
+  },
+  "BR257300548797C": {
+    "address": "Rua Bahamas, 26\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-120",
+    "latitude": -1.1521145,
+    "longitude": -48.4601555,
+    "city": "Belém",
+    "zipcode": "66912-120"
+  },
+  "BR255604031541B": {
+    "address": "Alameda do Carmo, 33, Próximo a igreja Reis dos Reis\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-230",
+    "latitude": -1.1513,
+    "longitude": -48.4594002,
+    "city": "Belém",
+    "zipcode": "66912-230"
+  },
+  "BR258852981488Q": {
+    "address": "Rua Nova, 255\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-080",
+    "latitude": -1.1500554,
+    "longitude": -48.461853,
+    "city": "Belém",
+    "zipcode": "66912-080"
+  },
+  "BR2530998956863": {
+    "address": "Avenida Camilo Salgado Filho, 612, Centro Educacional Lápis na Mã\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-250",
+    "latitude": -1.1501131,
+    "longitude": -48.4624329,
+    "city": "Belém",
+    "zipcode": "66912-250"
+  },
+  "BR2556101372242": {
+    "address": "Rua do Carmo, 26\nBairro: Praia Grande (Mosqueiro)\nBelém - 66914-040",
+    "latitude": -1.151163,
+    "longitude": -48.4636841,
+    "city": "Belém",
+    "zipcode": "66914-040"
+  },
+  "BR257690813744P": {
+    "address": "Rua Raimundo Cintra, 33, Atraz da panificadora Martinez\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-220",
+    "latitude": -1.1497903,
+    "longitude": -48.4638405,
+    "city": "Belém",
+    "zipcode": "66912-220"
+  },
+  "BR251048356165R": {
+    "address": "Rua Bariloche, 17, Acesso pela sta terezinha\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-130",
+    "latitude": -1.1482842,
+    "longitude": -48.4596596,
+    "city": "Belém",
+    "zipcode": "66912-130"
+  },
+  "BR251297883486O": {
+    "address": "Rua Bariloche, 17, Acesso pela rua santa Terezinh\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-130",
+    "latitude": -1.1482842,
+    "longitude": -48.4596596,
+    "city": "Belém",
+    "zipcode": "66912-130"
+  },
+  "BR2502916709275": {
+    "address": "Ria nova, 195\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-060",
+    "latitude": -1.1469001,
+    "longitude": -48.4600983,
+    "city": "Belém",
+    "zipcode": "66912-060"
+  },
+  "BR250880859719J": {
+    "address": "Avenida Principal, 14, Rua ao lado do varejão do cime\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-040",
+    "latitude": -1.1448848,
+    "longitude": -48.4607849,
+    "city": "Belém",
+    "zipcode": "66912-040"
+  },
+  "BR258628300510C": {
+    "address": "Avenida Principal, 14, Rua ao lado do varejão do cime\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-040",
+    "latitude": -1.1448848,
+    "longitude": -48.4607849,
+    "city": "Belém",
+    "zipcode": "66912-040"
+  },
+  "BR257630269023H": {
+    "address": "Avenida Principal, 14, Rua ao lado do varejão do cime\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-040",
+    "latitude": -1.1448848,
+    "longitude": -48.4607849,
+    "city": "Belém",
+    "zipcode": "66912-040"
+  },
+  "BR252728742822U": {
+    "address": "Alameda Teresópolis, 182, Rua da creche\nBairro: Mangueiras (Mosqueiro)\nBelém - 66912-060",
+    "latitude": -1.143436,
+    "longitude": -48.4600372,
+    "city": "Belém",
+    "zipcode": "66912-060"
+  },
+  "BR255642613681K": {
+    "address": "Alameda Petrópolis, 1000, Casa amarela con rosa\nBairro: Praia Grande (Mosqueiro)\nBelém - 66914-100",
+    "latitude": -1.1434402,
+    "longitude": -48.4619141,
+    "city": "Belém",
+    "zipcode": "66914-100"
+  },
+  "BR251146466899J": {
+    "address": "Avenida Dezesseis de Novembro, 1220, Mundo dos colchões ao lado do\nBairro: Vila (Mosqueiro)\nBelém - 66910-140",
+    "latitude": -1.1423743,
+    "longitude": -48.461216,
+    "city": "Belém",
+    "zipcode": "66910-140"
+  },
+  "BR256373097735V": {
+    "address": "Avenida Dezesseis de Novembro, 1220, Mundo dos colchões ao lado do\nBairro: Vila (Mosqueiro)\nBelém - 66910-140",
+    "latitude": -1.1423743,
+    "longitude": -48.461216,
+    "city": "Belém",
+    "zipcode": "66910-140"
+  }
+};
 </script>
 
 <!-- Google Maps -->
@@ -1938,9 +2450,10 @@ function handleQRCodeResult(qrData) {
 
 // Buscar endereço no banco de dados
 function lookupAddress(qrCode) {
-    // Por enquanto retorna null - será implementado quando você enviar a planilha Excel
-    // Exemplo de como funcionará:
-    // return addressDatabase[qrCode] || null;
+    // Buscar endereço pelo código QR
+    if (addressDatabase[qrCode]) {
+        return addressDatabase[qrCode].address;
+    }
     return null;
 }
 
